syntax = "proto3";

package LifeProto;

message GetPositionerRequest {
	int32 mapId = 1;
	int32 type = 2;
}

message PositionerDataDto {
	int32 mapId = 1;
	int32 type = 2;
	int32 value = 3;
}

message PositionerDataCollectionDto {
	repeated PositionerDataDto list = 1;
}